shrink down matrix into a hero

--- a/matrix.html
+++ b/matrix.html
@@ -10,20 +10,16 @@
 </head>
 <body>
 <div id="rapper">
-	<div id="topbar">
-		<a href="">About</a>
-		<a href="">Portfolio</a>
-		<a href="">Blog</a>
-	</div>
+
 
 	<div id="lines">
 		<div class="line">hello world</div>
 	</div>
 
 	<div id="overlay">
-	<div id="headr">
-		Gordon Zheng
-	</div>
+		<div id="headr">
+			Hi, I'm Gordon.
+		</div>
 	</div>
 
 	<div id="bottomhalf">Hello</div>
