--- a/matrix.html
+++ b/matrix.html
@@ -22,7 +22,12 @@
 		</div>
 	</div>
 
-	<div id="bottomhalf">Hello</div>
+	<div id="bottomhalf">
+		<div id="console">
+			type 'help' for list of commands<br>
+			gordn:~ user$
+		</div>
+	</div>
 </div>
 </body>
 </html>
