--- a/matrix.html
+++ b/matrix.html
@@ -24,8 +24,8 @@
 
 	<div id="bottomhalf">
 		<div id="console">
-			type 'help' for list of commands<br>
-			gordn:~ user$
+				<div class="console_line">type 'help' for list of commands</div>
+				<div class="console_line">gordn:~ user$</div>
 		</div>
 	</div>
 </div>
