writing console functionality

--- a/matrix.html
+++ b/matrix.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,800' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Cousine' rel='stylesheet' type='text/css'>
 	<script src="jquery.min.js"></script>
 	<script src="matrix.js"></script>
 </head>
@@ -24,8 +25,8 @@
 
 	<div id="bottomhalf">
 		<div id="console">
-				<div class="console_line">type 'help' for list of commands</div>
-				<div class="console_line">gordn:~ user$</div>
+				<div class="consoleLine">type 'help' for list of commands</div>
+				<div class="consoleLine">gordn:~ user$ </div>
 		</div>
 	</div>
 </div>
